--- a/weather.html
+++ b/weather.html
@@ -32,7 +32,7 @@
         </button>
       </div>
       <div class="weather loading">
-        <h2 class="city">Weather in Patabog</h2>
+        <h2 class="city">Weather in Morong</h2>
         <h1 class="temp">40°C </h1>
         <div class="flex">
         <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
